--- a/apps/templates/applications.yaml
+++ b/apps/templates/applications.yaml
@@ -4,7 +4,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: {{ $app }}
-  namespace: argo
+  namespace: {{ $.Values.spec.destination.namespace }}
   finalizers:
     - resources-finalizer.argocd.argoproj.io
 spec:
