--- a/apps/templates/applications.yaml
+++ b/apps/templates/applications.yaml
@@ -8,7 +8,7 @@ metadata:
   finalizers:
     - resources-finalizer.argocd.argoproj.io
 spec:
-  project: traffic-test
+  project: default
   destination:
     namespace: {{ $.Values.spec.destination.namespace }}
     server: {{ $.Values.spec.destination.server }}
