--- a/pro-grafana/values.yaml
+++ b/pro-grafana/values.yaml
@@ -1,6 +1,7 @@
 # Default values for kube-prometheus-stack.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
+publicSubnet: 'subnet-0aeb211dc854f8e75, subnet-01043e0f7103d49e3'
 
 ## Provide a name in place of kube-prometheus-stack for `app:` labels
 ##
